fix pom file, adjust HttpClient and FilteredList usage